# codemem

./: .gitignore  .release-please-manifest.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  install.sh  release-please-config.json
crates/codemem/: CHANGELOG.md  Cargo.toml
crates/codemem-api/: Cargo.toml
crates/codemem-api/src/: lib.rs  sse.rs  types.rs
crates/codemem-api/src/routes/: agents.rs  config.rs  graph.rs  insights.rs  memories.rs  mod.rs  namespaces.rs  patterns.rs  repos.rs  sessions.rs  stats.rs  timeline.rs  vectors.rs
crates/codemem-bench/: Cargo.toml  README.md
crates/codemem-bench/benches/: graph.rs  storage.rs  vector.rs
crates/codemem-bench/src/: lib.rs
crates/codemem-cli/: Cargo.toml  README.md
crates/codemem-cli/src/: commands_config.rs  commands_consolidation.rs  commands_data.rs  commands_doctor.rs  commands_export.rs  commands_init.rs  commands_lifecycle.rs  commands_migrate.rs  commands_search.rs  compress.rs  main.rs
crates/codemem-cli/src/tests/: commands_config_tests.rs  compress_tests.rs
crates/codemem-core/: CHANGELOG.md  Cargo.toml  README.md
crates/codemem-core/src/: config.rs  error.rs  lib.rs  metrics.rs  traits.rs  types.rs  utils.rs
crates/codemem-core/src/tests/: config_tests.rs  error_tests.rs  metrics_tests.rs  scope_tests.rs  types_tests.rs
crates/codemem-embeddings/: CHANGELOG.md  Cargo.toml  README.md
crates/codemem-embeddings/src/: gemini.rs  lib.rs  ollama.rs  openai.rs
crates/codemem-embeddings/src/tests/: gemini_tests.rs  lib_tests.rs  ollama_tests.rs  openai_tests.rs
crates/codemem-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/codemem-engine/rules/bash/: references.yml  symbols.yml
crates/codemem-engine/rules/cpp/: references.yml  symbols.yml
crates/codemem-engine/rules/csharp/: references.yml  symbols.yml
crates/codemem-engine/rules/go/: references.yml  symbols.yml
crates/codemem-engine/rules/hcl/: references.yml  symbols.yml
crates/codemem-engine/rules/java/: references.yml  symbols.yml
crates/codemem-engine/rules/kotlin/: references.yml  symbols.yml
crates/codemem-engine/rules/php/: references.yml  symbols.yml
crates/codemem-engine/rules/python/: references.yml  symbols.yml
crates/codemem-engine/rules/ruby/: references.yml  symbols.yml
crates/codemem-engine/rules/rust/: references.yml  symbols.yml
crates/codemem-engine/rules/scala/: references.yml  symbols.yml
crates/codemem-engine/rules/swift/: references.yml  symbols.yml
crates/codemem-engine/rules/typescript/: references.yml  symbols.yml
crates/codemem-engine/src/: analysis.rs  bm25.rs  compress.rs  consolidation.rs  enrichment.rs  enrichment_text.rs  file_indexing.rs  graph_linking.rs  graph_ops.rs  insights.rs  lib.rs  memory_ops.rs  metrics.rs  patterns.rs  pca.rs  persistence.rs  recall.rs  review.rs  scoring.rs  search.rs
crates/codemem-engine/src/consolidation/: cluster.rs  creative.rs  decay.rs  forget.rs  mod.rs  summarize.rs  union_find.rs
crates/codemem-engine/src/enrichment/: api_surface.rs  architecture.rs  blame.rs  change_impact.rs  code_smells.rs  complexity.rs  dead_code.rs  doc_coverage.rs  git.rs  hot_complex.rs  mod.rs  performance.rs  quality.rs  security.rs  security_scan.rs  temporal.rs  test_mapping.rs
crates/codemem-engine/src/hooks/: diff.rs  extractors.rs  mod.rs  triggers.rs
crates/codemem-engine/src/index/: api_surface.rs  blocklist.rs  chunker.rs  document_indexer.rs  incremental.rs  indexer.rs  linker.rs  manifest.rs  mod.rs  parser.rs  resolver.rs  rule_loader.rs  spec_parser.rs  symbol.rs
crates/codemem-engine/src/persistence/: compaction.rs  cross_repo.rs  lsp.rs  mod.rs
crates/codemem-engine/src/tests/: analysis_tests.rs  bm25_tests.rs  consolidation_tests.rs  engine_integration_tests.rs  enrichment_tests.rs  graph_linking_tests.rs  graph_ops_tests.rs  memory_expiry_tests.rs  metrics_tests.rs  patterns_tests.rs  persistence_tests.rs  recall_tests.rs  review_tests.rs  scope_tests.rs  scoring_tests.rs  search_tests.rs
crates/codemem-engine/src/watch/: mod.rs
crates/codemem-engine/tests/: hooks_integration.rs
crates/codemem-graph/: Cargo.toml  README.md
crates/codemem-graph/src/: algorithms.rs  lib.rs  traversal.rs
crates/codemem-graph/src/tests/: algorithms_tests.rs  lib_tests.rs  traversal_tests.rs
crates/codemem-hooks/: Cargo.toml  README.md
crates/codemem-hooks/src/: diff.rs  lib.rs
crates/codemem-hooks/src/tests/: diff_tests.rs  lib_tests.rs
crates/codemem-hooks/tests/: integration.rs
crates/codemem-index/: Cargo.toml  README.md
crates/codemem-index/src/: chunker.rs  extractor.rs  incremental.rs  indexer.rs  lib.rs  manifest.rs  parser.rs  resolver.rs  symbol.rs
crates/codemem-index/src/languages/: cpp.rs  csharp.rs  go.rs  hcl.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
crates/codemem-index/src/tests/: chunker_tests.rs  incremental_tests.rs  resolver_tests.rs
crates/codemem-mcp/: Cargo.toml  README.md
crates/codemem-mcp/src/: bm25.rs  http.rs  lib.rs  metrics.rs  patterns.rs  scoring.rs  test_helpers.rs  tools_consolidation.rs  tools_enrich.rs  tools_graph.rs  tools_memory.rs  tools_recall.rs  types.rs
crates/codemem-mcp/src/tests/: bm25_tests.rs  lib_tests.rs  scoring_tests.rs  tools_consolidation_tests.rs  tools_graph_tests.rs  tools_memory_tests.rs  tools_recall_tests.rs
crates/codemem-mcp/tests/: integration.rs
crates/codemem-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/codemem-storage/src/: backend.rs  cross_repo.rs  graph_persistence.rs  lib.rs  memory.rs  migrations.rs  queries.rs  schema.sql  vector.rs
crates/codemem-vector/: Cargo.toml  README.md
crates/codemem-vector/src/: lib.rs
crates/codemem-viz/: Cargo.toml  README.md
crates/codemem-viz/src/: frontend.html  lib.rs  pca.rs  routes.rs  types.rs
crates/codemem-watch/: Cargo.toml  README.md
crates/codemem-watch/src/: lib.rs
crates/codemem/src/: lib.rs  lockfile.rs  main.rs
crates/codemem/ui-dist/: index.html
docs/: comparison.md  (+9 more)
(+295 files in other folders)
