[workspace]
members = [
    "crates/codemem-core",
    "crates/codemem-storage",
    "crates/codemem-embeddings",
    "crates/codemem-engine",
    "crates/codemem-bench",
    "crates/codemem",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Codemem Contributors"]
license = "Apache-2.0"
repository = "https://github.com/cogniplex/codemem"
homepage = "https://github.com/cogniplex/codemem"
readme = "README.md"
keywords = ["memory", "embeddings", "vector-search", "knowledge-graph", "mcp"]
categories = ["command-line-utilities", "database", "science"]
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Vector search
usearch = "2"

# Graph
petgraph = "0.8"

# Embeddings
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
tokenizers = { version = "0.22", features = ["http"] }
ndarray = "0.17"
hf-hub = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "1.0"

# Utilities
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
dirs = "6"
lru = "0.16"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
reqwest = { version = "0.13", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }

# File watching
notify = "8"
notify-debouncer-mini = "0.7"
crossbeam-channel = "0.5"

# Indexing
walkdir = "2"
ignore = "0.4"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
debug = true
