[package]
name = "codemem-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "REST API and web server for the Codemem control plane"
include = ["src/**", "Cargo.toml", "ui-dist/**"]

[features]
default = []
ui = ["include_dir", "mime_guess"]

[dependencies]
codemem-core = { workspace = true }
codemem-storage = { workspace = true }
codemem-vector = { workspace = true }
codemem-graph = { workspace = true }
codemem-embeddings = { workspace = true }
codemem-mcp = { workspace = true, features = ["http"] }
codemem-index = { workspace = true }
codemem-watch = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2", optional = true }
