[package]
name = "codemem-engine"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain logic engine for Codemem: indexing, hooks, watching, scoring, recall, consolidation"

[dependencies]
codemem-core = { path = "../codemem-core", version = "0.10.0" }
codemem-storage = { path = "../codemem-storage", version = "0.10.0" }
codemem-embeddings = { path = "../codemem-embeddings", version = "0.9.0" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
similar = { workspace = true }
reqwest = { workspace = true }
regex = "1"
anyhow = { workspace = true }

# Indexing
walkdir = { workspace = true }
ignore = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
ast-grep-core = "0.41"
ast-grep-language = "0.41"
serde_yaml = "0.9"

# File watching
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tempfile = "3"
