[package]
name = "codemem-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "PostToolUse hook handler for passive capture from AI coding assistants"

[dependencies]
codemem-core = { workspace = true }
codemem-storage = { workspace = true }
codemem-vector = { workspace = true }
codemem-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
codemem-core = { workspace = true }
serde_json = { workspace = true }
