[package]
name = "codemem-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter code indexing for Codemem memory engine"

[dependencies]
codemem-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

tree-sitter = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }

# Manifest parsing
toml = "1.0"

# Language grammars (per-crate, not workspace)
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.1"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-hcl = "1.1.0"
