[package]
name = "codemem-storage"
version = "0.15.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLite persistence layer for Codemem"

[dependencies]
codemem-core = { path = "../codemem-core", version = "0.17.0" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
usearch = { workspace = true }
petgraph = { workspace = true }
