[package]
name = "codemem-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Interactive visualization dashboard for Codemem"

[dependencies]
codemem-core = { workspace = true }
codemem-storage = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
open = "5"
anyhow = { workspace = true }
